--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@ viewer.cesiumWidget.screenSpaceEventHandler.removeInputAction(
 );
 
 const controller = viewer.scene.screenSpaceCameraController;
-controller.enableTranslate = false;
-controller.enableRotate = false;
-controller.enableTilt = false;
-controller.enableLook = false;
+controller.enableRotate = true;
+controller.enableTranslate = true;
+controller.enableTilt = true;
 controller.enableZoom = true;
+controller.enableLook = false;
 controller.enableDoubleClickZoom = false;
 
 // Wyłącz multi-touch dla mobilnych
 controller.rotateEventTypes = [Cesium.CameraEventType.LEFT_DRAG];
 controller.tiltEventTypes = [];
 controller.translateEventTypes = [];
-controller.pinchEventTypes = [];
-controller.wheelEventTypes = [];
+//controller.pinchEventTypes = [];
+//controller.wheelEventTypes = [];
 
 // odłączenie double-click zoom
 controller.enableDoubleClickZoom = false;
