--- a/index.html
+++ b/index.html
@@ -139,26 +139,11 @@ const viewer = new Cesium.Viewer('cesiumContainer', {
     infoBox: false,
 });
 
-const controller = viewer.scene.screenSpaceCameraController;
-
-// Wyłącz tilt i obrót dla pinch
-controller.enableRotate = true;        // jeden palec
-controller.enableTilt = false;         // tilt wyłączony całkowicie
-controller.enableTranslate = false;    // przesuwanie wyłączone
-controller.enableZoom = true;          // zoom działa
-controller.enableLook = false;
-
-// Nadpisz pinchEventTypes tak, aby nie wywoływało tilt/rotate
-controller.pinchEventTypes = [Cesium.CameraEventType.PINCH]; // tylko pinch = zoom
-controller.rotateEventTypes = [Cesium.CameraEventType.LEFT_DRAG]; // jeden palec = obrót
-controller.tiltEventTypes = []; // brak tilt
-controller.translateEventTypes = []; // brak przesuwania
-
 const handler = viewer.cesiumWidget.screenSpaceEventHandler;
 
 // Odłącz niepożądane zdarzenia
 handler.removeInputAction(Cesium.ScreenSpaceEventType.LEFT_DOUBLE_CLICK);
-handler.removeInputAction(Cesium.ScreenSpaceEventHandler.TwoPointMotionEvent);
+handler.removeInputAction(Cesium.ScreenSpaceEventHandler.PINTH_DRAG);
 
 //const controller = viewer.scene.screenSpaceCameraController;
 //controller.enableRotate = true;
