--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@ html, body, #cesiumContainer { width:100%; height:100%; margin:0; padding:0; }
   z-index: 1000;
 }
 
-/* mobile responsive */
+/* Małe tablety / duże telefony */
+@media (max-width: 1024px) {
+  #uiLabel {
+    min-width: 250px;
+    font-size: 16px;
+    padding: 10px 14px;
+  }
+  #closeBtn {
+    font-size: 14px;
+    padding: 3px 6px;
+  }
+}
+
+/* Telefony w pionie i poziomie */
 @media (max-width: 768px) {
   #uiLabel {
     min-width: 300px;
@@ -32,6 +45,19 @@ html, body, #cesiumContainer { width:100%; height:100%; margin:0; padding:0; }
   #closeBtn {
     font-size: 16px;
     padding: 4px 8px;
+  }
+}
+
+/* Bardzo małe telefony */
+@media (max-width: 480px) {
+  #uiLabel {
+    min-width: 220px;
+    font-size: 16px;
+    padding: 12px 16px;
+  }
+  #closeBtn {
+    font-size: 14px;
+    padding: 3px 6px;
   }
 }
 
