--- a/index.html
+++ b/index.html
@@ -22,45 +22,6 @@ html, body, #cesiumContainer { width:100%; height:100%; margin:0; padding:0; }
   z-index: 1000;
 }
 
-/* Małe tablety / duże telefony */
-@media (max-width: 1024px) {
-  #uiLabel {
-    min-width: 250px;
-    font-size: 16px;
-    padding: 10px 14px;
-  }
-  #closeBtn {
-    font-size: 14px;
-    padding: 3px 6px;
-  }
-}
-
-/* Telefony w pionie i poziomie */
-@media (max-width: 768px) {
-  #uiLabel {
-    min-width: 300px;
-    font-size: 18px;
-    padding: 16px 20px;
-  }
-  #closeBtn {
-    font-size: 16px;
-    padding: 4px 8px;
-  }
-}
-
-/* Bardzo małe telefony */
-@media (max-width: 480px) {
-  #uiLabel {
-    min-width: 220px;
-    font-size: 16px;
-    padding: 12px 16px;
-  }
-  #closeBtn {
-    font-size: 14px;
-    padding: 3px 6px;
-  }
-}
-
 /* Wrapper nagłówek + button */
 #labelHeaderWrapper {
   display: flex;
@@ -166,15 +127,6 @@ const viewer = new Cesium.Viewer('cesiumContainer', {
     infoBox: false,
 });
 
-function getBillboardSize() {
-    const width = window.innerWidth;
-
-    if (width <= 480) return 36;   // telefony - większe gwiazdy
-    if (width <= 768) return 28;   // małe tablety
-    if (width <= 1024) return 32;  // większe tablety / laptopy
-    return 32;                      // desktop
-}
-
 const handler = viewer.cesiumWidget.screenSpaceEventHandler;
 
 handler.removeInputAction(Cesium.ScreenSpaceEventType.LEFT_DOUBLE_CLICK);
@@ -268,13 +220,12 @@ closeBtn.addEventListener('click', hideOverlay);
 loadMarathonsFromURL("marathons.txt", function(marathonPoints){
 
     const points = marathonPoints.map(p => {
-        const size = getBillboardSize();
         const entity = viewer.entities.add({
             position: Cesium.Cartesian3.fromDegrees(p.lon, p.lat, 1),
             billboard: {
                 image: "star.png",
-                width: size,
-                height: size,
+                width: 1,
+                height: 1,
                 verticalOrigin: Cesium.VerticalOrigin.BOTTOM
             }
         });
@@ -351,6 +302,34 @@ loadMarathonsFromURL("marathons.txt", function(marathonPoints){
         });
     });
 
+    function adjustForOrientation() {
+        const isPortrait = window.innerHeight > window.innerWidth;
+
+        // ustawienia gwiazdek
+        const starSize = isPortrait ? 56 : 28; // 2x rozmiar w pionie
+        points.forEach(entity => {
+            entity.billboard.width = starSize;
+            entity.billboard.height = starSize;
+        });
+
+        // ustawienia pop-up
+        const label = document.getElementById('uiLabel');
+        if(isPortrait){
+            label.style.minWidth = '400px';
+            label.style.fontSize = '22px';
+            label.style.padding = '16px 20px';
+        } else {
+            label.style.minWidth = '200px';
+            label.style.fontSize = '14px';
+            label.style.padding = '8px 12px';
+        }
+    }
+
+    // wywołanie przy starcie
+    adjustForOrientation();
+
+    // reagowanie na zmianę orientacji
+    window.addEventListener('resize', adjustForOrientation);
 });
 
 </script>
