--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@ html, body, #cesiumContainer { width:100%; height:100%; margin:0; padding:0; }
 #uiLabel {
     position: fixed; /* zamiast absolute */
     top: 10px;       /* np. odstęp od góry */
-    left: 50%;       /* środkuje popup w poziomie */
-    transform: translateX(-50%); /* centrowanie */
+    right: 10px;     /* np. odstęp od prawej */
     max-width: 90%;  /* nie wychodzi poza ekran */
     z-index: 1000;
     background: rgba(255,255,255,0.95);
