--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ html, body, #cesiumContainer { width:100%; height:100%; margin:0; padding:0; }
     position: fixed; /* zamiast absolute */
     top: 10px;       /* np. odstęp od góry */
     right: 10px;     /* np. odstęp od prawej */
+    left: 50%;
     max-width: 90%;  /* nie wychodzi poza ekran */
     z-index: 1000;
     background: rgba(255,255,255,0.95);
