--- a/index.html
+++ b/index.html
@@ -5,57 +5,7 @@
 <title>Plan startów w różnych krajach</title>
 <script src="https://unpkg.com/cesium/Build/Cesium/Cesium.js"></script>
 <link href="https://unpkg.com/cesium/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-<style>
-html, body, #cesiumContainer { width:100%; height:100%; margin:0; padding:0; }
-#uiLabel {
-    position: fixed; /* zamiast absolute */
-    top: 10px;       /* np. odstęp od góry */
-    max-width: 90%;  /* nie wychodzi poza ekran */
-    z-index: 1000;
-    background: rgba(255,255,255,0.95);
-    border: 2px solid #4CAF50;
-    border-radius: 8px;
-    padding: 8px 12px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-    pointer-events: auto;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-}
-
-/* Wrapper nagłówek + button */
-#labelHeaderWrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 6px;
-}
-
-/* Nagłówek zajmuje pozostałą przestrzeń */
-#labelHeader {
-  font-weight: bold;
-  flex-grow: 1;
-}
-
-/* Przycisk */
-#closeBtn {
-  flex-shrink: 0;
-  cursor: pointer;
-  background: #4CAF50;
-  color: white;
-  border: none;
-  padding: 2px 6px;
-  border-radius: 4px;
-  font-size: 12px;
-}
-
-#closeBtn:hover {
-  background: #45a049;
-}
-
-#uiLabel ul li {
-  margin-bottom: 4px;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="cesiumContainer"></div>
@@ -66,291 +16,6 @@ html, body, #cesiumContainer { width:100%; height:100%; margin:0; padding:0; }
   </div>
   <ul id="labelList" style="margin:0; padding:0; list-style:none;"></ul>
 </div>
-<script>
-function loadMarathonsFromURL(url, callback) {
-    fetch(url)
-        .then(response => {
-            if (!response.ok) throw new Error("Nie udało się wczytać pliku");
-            return response.text();
-        })
-        .then(text => {
-            const lines = text.split(/\r?\n/).filter(line => line.trim() !== "");
-            const marathonMap = new Map();
-
-            lines.forEach(line => {
-                const parts = line.split("|").map(p => p.trim());
-                if(parts.length < 7) return;
-
-                const [id, country, city, lonStr, latStr, type, date] = parts;
-                const lon = parseFloat(lonStr);
-                const lat = parseFloat(latStr);
-
-                // jeśli obiekt o tym id nie istnieje, dodajemy
-                if (!marathonMap.has(id)) {
-                    marathonMap.set(id, {
-                        id: id,
-                        country: country,
-                        city: city,
-                        lon: lon,
-                        lat: lat,
-                        marathons: []
-                    });
-                }
-
-                // dodajemy maraton do tablicy marathons
-                marathonMap.get(id).marathons.push({ type: type, date: date });
-            });
-
-            // zamiana mapy na tablicę
-            const marathonPointsGrouped = Array.from(marathonMap.values());
-            callback(marathonPointsGrouped);
-        })
-        .catch(err => console.error("Błąd wczytywania maratonów:", err));
-}
-
-
-const viewer = new Cesium.Viewer('cesiumContainer', {
-    terrainProvider: new Cesium.EllipsoidTerrainProvider(),
-
-    imageryProvider: new Cesium.OpenStreetMapImageryProvider({
-        url: "https://a.tile.openstreetmap.org/"
-    }),
-    baseLayerPicker: false,
-    geocoder: false,
-    homeButton: false,
-    sceneModePicker: false,
-    timeline: false,
-    navigationHelpButton: false,
-    animation: false,
-    creditsDisplay: false,    // usuwa box w górnym rogu
-    selectionIndicator: false, // usuwa zielone ramki wokół punktów
-    infoBox: false,
-});
-
-const handler = viewer.cesiumWidget.screenSpaceEventHandler;
-
-handler.removeInputAction(Cesium.ScreenSpaceEventType.LEFT_DOUBLE_CLICK);
-handler.removeInputAction(Cesium.ScreenSpaceEventType.PINCH_MOVE);
-handler.removeInputAction(Cesium.ScreenSpaceEventType.PINCH_END);
-
-// --- Wyłącz tilt w controllerze (nie potrzebny teraz) ---
-viewer.scene.screenSpaceCameraController.enableTilt = false;
-
-// --- Twój własny PINCH_MOVE (dwoma palcami) tylko zoom ---
-let previousPinchDistance = null;
-
-handler.setInputAction(function(twoPoints) {
-    // Oblicz odległość między palcami
-    const dx = twoPoints.position2.x - twoPoints.position1.x;
-    const dy = twoPoints.position2.y - twoPoints.position1.y;
-    const distance = Math.sqrt(dx*dx + dy*dy);
-
-    if (previousPinchDistance !== null) {
-        const delta = distance - previousPinchDistance;
-
-        // Zoom kamery wzdłuż kierunku patrzenia
-        viewer.camera.moveForward(-delta * 0.5); // dostosuj czułość
-    }
-
-    previousPinchDistance = distance;
-}, Cesium.ScreenSpaceEventHandler.TwoPointMotionEvent);
-
-// Reset po zakończeniu gestu
-handler.setInputAction(function() {
-    previousPinchDistance = null;
-}, Cesium.ScreenSpaceEventHandler.TwoPointEndEvent);
-
-//const controller = viewer.scene.screenSpaceCameraController;
-//controller.enableRotate = true;
-//controller.enableTranslate = true;
-//controller.enableTilt = true;
-//controller.enableZoom = true;
-//controller.enableLook = false;
-//controller.enableDoubleClickZoom = false;
-
-// Wyłącz multi-touch dla mobilnych
-//controller.rotateEventTypes = [Cesium.CameraEventType.LEFT_DRAG];
-//controller.tiltEventTypes = [];
-//controller.translateEventTypes = [];
-//controller.pinchEventTypes = [];
-//controller.wheelEventTypes = [];
-
-// odłączenie double-click zoom
-//controller.enableDoubleClickZoom = false;
-
-// OSM
-viewer.imageryLayers.addImageryProvider(
-    new Cesium.OpenStreetMapImageryProvider({ url: 'https://a.tile.openstreetmap.org/' })
-);
-
-// Wyłączenie kosmosu
-const scene = viewer.scene;
-scene.skyBox.show = false;
-scene.skyAtmosphere.show = false;
-scene.sun.show = false;
-scene.moon.show = false;
-
-const ellipsoid = Cesium.Ellipsoid.WGS84;
-const occluder = new Cesium.EllipsoidalOccluder(
-    ellipsoid,
-    viewer.camera.positionWC
-);
-
-// Kamera startowa
-viewer.camera.setView({ destination: Cesium.Cartesian3.fromDegrees(0,0,2000000) });
-scene.screenSpaceCameraController.minimumZoomDistance = 5000;
-scene.screenSpaceCameraController.maximumZoomDistance = 6371000*2;
-// Punkty
-
-const label = document.getElementById('uiLabel');
-const labelText = document.getElementById('labelText');
-const closeBtn = document.getElementById('closeBtn');
-
-let activeEntity = null;
-
-// Funkcja ukrywania overlay
-function hideOverlay() {
-    activeEntity = null;
-    label.style.display = 'none';
-}
-
-// Przycisk zamykania
-closeBtn.addEventListener('click', hideOverlay);
-
-loadMarathonsFromURL("marathons.txt", function(marathonPoints){
-
-    const points = marathonPoints.map(p => {
-        const entity = viewer.entities.add({
-            position: Cesium.Cartesian3.fromDegrees(p.lon, p.lat, 1),
-            billboard: {
-                image: "star.png",
-                width: 1,
-                height: 1,
-                verticalOrigin: Cesium.VerticalOrigin.BOTTOM
-            }
-        });
-        entity.data = p;
-        entity.clickState = 0;
-        return entity;
-    });
-
-    // ---------------------- Handler kliknięcia ----------------------
-    const handler = new Cesium.ScreenSpaceEventHandler(scene.canvas);
-    handler.setInputAction(function(click){
-        const picked = scene.pick(click.position);
-        if(Cesium.defined(picked) && picked.id){
-            const entity = picked.id;
-
-            if(entity.clickState === 0){
-                entity.clickState = 1;
-                activeEntity = entity;
-                points.forEach(p => { if(p!==entity) p.clickState = 0; });
-
-            } else {
-                viewer.camera.flyTo({
-                    destination: Cesium.Cartesian3.fromDegrees(
-                        entity.data.lon,
-                        entity.data.lat,
-                        50000
-                    ),
-                    duration: 1.5
-                });
-                entity.clickState = 0;
-                activeEntity = entity;
-            }
-
-        } else {
-            hideOverlay();
-            points.forEach(p => p.clickState = 0);
-        }
-    }, Cesium.ScreenSpaceEventType.LEFT_CLICK);
-
-    // ---------------------- Aktualizacja overlay i widoczności billboardów ----------------------
-    viewer.scene.preRender.addEventListener(() => {
-        if (activeEntity) {
-            const pos = activeEntity.position.getValue(Cesium.JulianDate.now());
-            const windowPos = scene.cartesianToCanvasCoordinates(pos);
-            if (windowPos) {
-
-                // nagłówek: country + city
-                const labelHeader = document.getElementById('labelHeader');
-                labelHeader.innerHTML = `${activeEntity.data.country}: ${activeEntity.data.city}`;
-
-                // lista maratonów
-                const labelList = document.getElementById('labelList');
-                labelList.innerHTML = "";
-                activeEntity.data.marathons.forEach(m => {
-                    const li = document.createElement("li");
-                    li.innerHTML = `<b>${m.type}</b>: ${m.date}`;
-                    labelList.appendChild(li);
-                });
-
-                // ustawienie pozycji overlay
-                let x = windowPos.x;
-                let y = windowPos.y;
-
-                // ograniczamy popup żeby nie wychodził poza ekran
-                const popup = document.getElementById('uiLabel');
-                const popupWidth = popup.offsetWidth;
-                const popupHeight = popup.offsetHeight;
-                const padding = 10; // minimalny odstęp od krawędzi
-
-                if (x + popupWidth > window.innerWidth - padding) {
-                    x = window.innerWidth - popupWidth - padding;
-                }
-                if (x < padding) x = padding;
-
-                if (y + popupHeight > window.innerHeight - padding) {
-                    y = window.innerHeight - popupHeight - padding;
-                }
-                if (y < padding) y = padding;
-
-                popup.style.left = x + 'px';
-                popup.style.top = y + 'px';
-                label.style.display = 'block';
-            }
-        } else {
-            label.style.display = 'none';
-        }
-
-        // occluder dla billboardów
-        occluder.cameraPosition = viewer.camera.positionWC;
-        points.forEach(entity => {
-            const pos = entity.position.getValue(Cesium.JulianDate.now());
-            entity.billboard.show = occluder.isPointVisible(pos);
-        });
-    });
-
-    function adjustForOrientation() {
-        const isPortrait = window.innerHeight > window.innerWidth;
-
-        // ustawienia gwiazdek
-        const starSize = isPortrait ? 64 : 32; // 2x rozmiar w pionie
-        points.forEach(entity => {
-            entity.billboard.width = starSize;
-            entity.billboard.height = starSize;
-        });
-
-        // ustawienia pop-up
-        const label = document.getElementById('uiLabel');
-        if (isPortrait) {
-            label.style.minWidth = '458px';
-            label.style.fontSize = '25px';
-            label.style.padding = '18px 23px';
-        } else {
-            label.style.minWidth = '229px';
-            label.style.fontSize = '16px';
-            label.style.padding = '9px 14px';
-        }
-    }
-
-    // wywołanie przy starcie
-    adjustForOrientation();
-
-    // reagowanie na zmianę orientacji
-    window.addEventListener('resize', adjustForOrientation);
-});
-
-</script>
+<script src="script.js"></script>
 </body>
 </html>
